--- a/blockpost.html
+++ b/blockpost.html
@@ -1,8 +1,13 @@
 <html>
-    <head>El titulo del post</head>
+    <head>El titulo del post
     <link rel="stylesheet" href="estilo.css">
+    </head>
     <body>
-        <h1>Aqui vamos a hacer un blog post</h1>
-        <p>Y este es el parrafo de inicio</p>
+        <div id="container">
+            <div id="post">
+                <h1>Este es el titulo atractivo e interesante</h1>
+                <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con las ramas</p>
+            </div>
+        </div>
     </body>
 </html>
