Cambie el titulo del blogpost
Porque puedo

--- a/blockpost.html
+++ b/blockpost.html
@@ -1,5 +1,5 @@
 <html>
-    <head>El titulo del post
+    <head>Ahora ya estamos Trabajando en GItHub
     <link rel="stylesheet" href="estilo.css">
     </head>
     <body>
