--- a/blockpost.html
+++ b/blockpost.html
@@ -8,7 +8,7 @@
                 Cabecera
             <div id="post">    
                 <h1>Este es el titulo atractivo e interesante</h1>
-                <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con las ramas</p>
+                <p>Estamos tratando de solucionar los problemas que hemos tenido, pero estamos haviendo un buen trabajo</p>
             </div>
         </div>
     </body>
